test/cli/test-validating-policy/operation-delete/resource.yaml
apiVersion: v1
kind: Pod
metadata:
  name: protected-pod
  namespace: test-ns
  labels:
    protected: "true"
spec:
  containers:
  - name: nginx
    image: nginx:1.25
